[package]
name = "maga"
version = "0.1.0"
edition = "2021"
author = "Nordine Bittich <contact@bittich.be>"
description =  "Random Donald Trump's tweets"
categories = ["command-line-utilities"]
license = "MIT"


[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
clap = {version = "3.1.0", features = ["derive"]}
rand = "0.8.5"
serde = {version = "1.0.136", features=["derive"]}
serde_json = "1.0.79"
